--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.MyApp"
         tools:targetApi="31">
         <activity
+            android:name=".Text"
+            android:exported="false" />
+        <activity
             android:name=".Select_Language"
             android:exported="false" />
         <activity
