--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
 }
+apply plugin : 'kotlin-kapt'
 
 android {
     namespace 'com.example.myapp'
@@ -51,9 +52,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.squareup.picasso:picasso:2.8'
 
+
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
     implementation 'com.airbnb.android:lottie:3.4.1'
+  kapt "com.android.databinding:compiler:3.1.4"
+}
+kapt {
+    generateStubs = true
 }
