--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,14 @@ dependencies {
 
     implementation 'com.airbnb.android:lottie:3.4.1'
   kapt "com.android.databinding:compiler:3.1.4"
+
+    implementation "androidx.camera:camera-core:1.2.3"
+    implementation "androidx.camera:camera-camera2:1.2.3"
+    implementation "androidx.camera:camera-lifecycle:1.2.3"
+    implementation "androidx.camera:camera-video:1.2.3"
+
+    implementation "androidx.camera:camera-view:1.2.3"
+    implementation "androidx.camera:camera-extensions:1.2.3"
 }
 kapt {
     generateStubs = true
