--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,10 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
 }
-apply plugin : 'kotlin-kapt'
 
 android {
     namespace 'com.example.myapp'
-    compileSdk 34
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.myapp"
@@ -35,9 +34,6 @@ android {
     buildFeatures{
         viewBinding = true
     }
-    dataBinding {
-        enabled = true
-    }
 }
 
 dependencies {
@@ -51,6 +47,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.google.mlkit:text-recognition:16.0.0'
 
 
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
@@ -58,16 +55,4 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
     implementation 'com.airbnb.android:lottie:3.4.1'
-  kapt "com.android.databinding:compiler:3.1.4"
-
-    implementation "androidx.camera:camera-core:1.2.3"
-    implementation "androidx.camera:camera-camera2:1.2.3"
-    implementation "androidx.camera:camera-lifecycle:1.2.3"
-    implementation "androidx.camera:camera-video:1.2.3"
-
-    implementation "androidx.camera:camera-view:1.2.3"
-    implementation "androidx.camera:camera-extensions:1.2.3"
-}
-kapt {
-    generateStubs = true
 }
