--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ apply plugin : 'kotlin-kapt'
 android {
     namespace 'com.example.myapp'
     compileSdk 34
+    //useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.example.myapp"
@@ -71,6 +72,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:19.0.0'
     implementation 'com.google.mlkit:language-id:17.0.4'
     implementation 'com.google.mlkit:translate:17.0.1'
+
+
 }
 kapt {
     generateStubs = true
