--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,30 @@
 buildscript {
+
+   // repositories {
+     //   google()
+       // mavenCentral()
+    //}
     dependencies {
         classpath 'com.google.gms:google-services:4.4.0'
         classpath "com.android.tools.build:gradle-api:8.1.1"
+
 
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '8.1.1' apply false
     id 'com.android.library' version '8.1.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.21' apply false}
  //   id("com.google.gms.google-services") version "4.3.15" apply false
-}
+   // allprojects {
+     //   repositories{
+       //     google()
+         //   mavenCentral()
+           // maven{url "https://maven.google.com"}
+
+
+    //}}
+//task clean(type: Delete){
+  //  delete rootProject.buildDir
+//}
+
